5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4464/executions/1812_2574.log
== TEST (2019-06-16 16:30:41) 
-- CODE:
N = input()
minu = False
maiu = False
if (len(N>=8)):
	for i in range(len(N)):
		if N[i].islower():
			minu = True
		elif N[i].isuper():
			maiu = True
else:
	print("SENHA INVALIDA")
if (minu == True and maiu == True):
	print("SENHA VALIDA")
else:
	print("SENHA INVALIDA")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (len(N>=8)):
TypeError: '>=' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-16 16:31:17) 
-- CODE:
N = input()
minu = False
maiu = False
if (len(N>=8)):
	for i in range(len(N)):
		if N[i].islower():
			minu = True
		elif N[i].isuper():
			maiu = True
else:
	print("SENHA INVALIDA")
if (minu == True and maiu == True):
	print("SENHA VALIDA")
else:
	print("SENHA INVALIDA")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (len(N>=8)):
TypeError: '>=' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-16 16:32:14) 
-- CODE:
N = input()
minu = False
maiu = False
if (len(N)>=8):
	for i in range(len(N)):
		if N[i].islower():
			minu = True
		elif N[i].isuper():
			maiu = True
else:
	print("SENHA INVALIDA")
if (minu == True and maiu == True):
	print("SENHA VALIDA")
else:
	print("SENHA INVALIDA")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    elif N[i].isuper():
AttributeError: 'str' object has no attribute 'isuper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-16 16:32:15) 
-- CODE:
N = input()
minu = False
maiu = False
if (len(N)>=8):
	for i in range(len(N)):
		if N[i].islower():
			minu = True
		elif N[i].isuper():
			maiu = True
else:
	print("SENHA INVALIDA")
if (minu == True and maiu == True):
	print("SENHA VALIDA")
else:
	print("SENHA INVALIDA")
		
-- EXECUTION TIME:
0.597464
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1812/2574/main.py", line 8, in <module>
    elif N[i].isuper():
AttributeError: 'str' object has no attribute 'isuper'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-16 16:32:57) 
-- CODE:
N = input()
minu = False
maiu = False
if (len(N)>=8):
	for i in range(len(N)):
		if N[i].islower():
			minu = True
		elif N[i].isupper():
			maiu = True
else:
	print("SENHA INVALIDA")
if (minu == True and maiu == True):
	print("SENHA VALIDA")
else:
	print("SENHA INVALIDA")
		
-- OUTPUT:
SENHA VALIDA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-16 16:33:29) 
-- CODE:
N = input()
minu = False
maiu = False
if (len(N)>=8):
	for i in range(len(N)):
		if N[i].islower():
			minu = True
		elif N[i].isupper():
			maiu = True
else:
	print("SENHA INVALIDA")
if (minu == True and maiu == True):
	print("SENHA VALIDA")
else:
	print("SENHA INVALIDA")
		
-- EXECUTION TIME:
0.698204
-- TEST CASE 1:
---- input:
123A456b
---- correct output:
SENHA VALIDA
---- user output:
SENHA VALIDA
-- TEST CASE 2:
---- input:
123
---- correct output:
SENHA INVALIDA
---- user output:
SENHA INVALIDA
SENHA INVALIDA
-- TEST CASE 3:
---- input:
123456789
---- correct output:
SENHA INVALIDA
---- user output:
SENHA INVALIDA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-16 16:35:56) 
-- CODE:
N = input()
minu = False
maiu = False
	for i in range(len(N)):
		if N[i].islower():
			minu = True
		elif N[i].isupper():
			maiu = True
if (minu == True and maiu == True and len(N) >= 8):
	print("SENHA VALIDA")
else:
	print("SENHA INVALIDA")
		
-- EXECUTION TIME:
0.813945
-- ERROR:
  File "/home/codebench/codes/1812/2574/main.py", line 4
    for i in range(len(N)):
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
